--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 ---
 layout: default
-title: "Nos Cambio la Vida \ Our Lives Transformed"
+title: "Nos Cambió la Vida, Our Lives Transformed"
 ---
 <div class="introduction">
   <h1></h1>
 
 <p>
-  Nos Cambio la Vida / Our Lives Transformed is a digital edition of short autobiographical narratives written by Dominican writers of Haitian descent that have been translated into English.
+  <em>Nos Cambió la Vida, Our Lives Transformed</em> is a digital edition of short autobiographical narratives written by Dominican writers of Haitian descent that have been translated into English.
 </p>
 </div>
 
-<hr>
+<hr class="toc-hr">
 
 <div class="toc">
   <div class="intro-pref">
