cleaned up template files

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: "Nos Cambió la Vida, Our Lives Transformed"
   <div class="intro-pref">
     {% for item in site.texts %}
     <!-- Replace ids below with preface and intro once those pages are created-->
-      {% if item.id == "/texts/intro" or item.id == "/texts/preface" %}
+      {% if item.id == "/texts/introduction" or item.id == "/texts/preface" %}
         <div class="toc-entry">
           <h2><a href="{{ site.baseurl }}{{ item.url }}">
             {{ item.title }}
