Prepping for dev deployment, cleaning up files

--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@ layout: default
 title: "Nos Cambió la Vida, Our Lives Transformed"
 ---
 
-<h1>Placeholder for artwork</h1>
+Placeholder - waiting for artwork
