--- a/toc.html
+++ b/toc.html
@@ -11,6 +11,7 @@ order: 2
     {% for item in site.texts %}
     <!-- Replace ids below with preface and intro once those pages are created-->
       {% if item.id == "/texts/introduction" or item.id == "/texts/preface" %}
+      {% assign sorted_texts = site.texts | sort:"order" %}
         <div class="toc-entry">
           <h2><a href="{{ site.baseurl }}{{ item.url }}">
             {{ item.title }}
