--- a/toc.html
+++ b/toc.html
@@ -4,10 +4,10 @@ title: "Table of Contents"
 order: 2
 ---
 
-<hr class="toc-hr">
+<hr id="toc-hr">
 
-<div class="toc">
-  <div class="intro-pref">
+<div id="toc">
+  <div id="intro-pref">
     {% for item in site.texts %}
     <!-- Replace ids below with preface and intro once those pages are created-->
       {% if item.id == "/texts/introduction" or item.id == "/texts/preface" %}
@@ -16,13 +16,13 @@ order: 2
           <h2><a href="{{ site.baseurl }}{{ item.url }}">
             {{ item.title }}
           </a></h2>
-          <h2 class="author">{{ item.author }}</h2>    
+          <h3 class="author">{{ item.author }}</h3>    
         </div>     
       {% endif %}
     {% endfor %}
   </div>
 
-  <div class="toc-texts">
+  <div id="toc-texts">
     {% assign sorted_texts = site.texts | sort:"order" %}
     {% for item in sorted_texts %}
       {% if item.id != "/texts/introduction" and item.id != "/texts/preface" %}
@@ -30,7 +30,7 @@ order: 2
           <h2><a href="{{ site.baseurl }}{{ item.url }}">
             {{ item.title }}
           </a></h2>
-          <h2 class="author">{{ item.author }}</h2>    
+          <h3 class="author">{{ item.author }}</h3>    
         </div>
       {% endif %}  
     {% endfor %}
